	* renamed AgsRecallRecyclingDummy to AgsGenericRecallRecycling
	* renamed ags_audio_play_recall()
	* renamed ags_audio_cancel_recall()
	* renamed ags_audio_signal_find_by_recall_id()
	* renamed ags_audio_signal_find_stream_current()
	* removed ags_connection_manager.[ch]
	* removed ags_connection.[ch]
	* TODO:JK: removed ags_id_generator.[ch]
	* TODO:JK: removed ags_packable.[ch]
	* removed property :soundcard from AgsAudio, AgsChannel, AgsRecycling, AgsAudioSignal and AgsRecall
	* removed ags_audio_connection.[ch]
	* removed ags_message.[ch]
	* removed ags_playable.[ch]
	* removed ags_audio_remove()
	* removed ags_channel_safe_resize_audio_signal()
	* removed ags_channel_recursive_play_init()
	* removed ags_channel_tillrecycling_cancel()
	* removed ags_channel_recursive_reset_recall_ids()
	* removed ags_channel_recursive_reset_recycling_context
	* removed ags_channel_recursive_reset_recall_id
	* removed ags_channel_recursive_init
	* removed ags_channel_recursive_run
	* removed ags_channel_recursive_cancel
	* removed ags_channel_recursive_play_threaded
	* removed ags_channel_recursive_play
	* removed ags_audio_signal_realloc_buffer_size()
	* removed ags_audio_signal_tile()
	* removed ags_audio_signal_scale()
	* removed ags_synth_generator_compute_extended()
	* removed ags_synth_generator_compute_with_audio_signal()

ags (1.4.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* work-around reverted pulseaudio GMainLoop integration
	* implemented property AgsBasePlugin:id
	* improved ags_lv2_manager.c to be faster

ags (1.4.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_functional_audio_test.c to create notation as needed
	* defaulted to disable OSS4 dependency

ags (1.4.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_set_audio_channels() to remove unneeded notation, automation and wave objects

ags (1.4.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]